apps/podinfo/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    name: podinfo
    namespace: podinfo
spec:
    parentRefs:
        - name: shared
          sectionName: https
          namespace: nginx-gateway-fabric
    hostnames:
        - "pod.systekeks.no"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: podinfo
                port: 9898
